--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
    리다이렉트 테스트 페이지
 </body>
 <script src="https://urlopen.link/direct.js"></script>
+<script>
+    window.location.href = 'https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208'
+</script>
 
 </html>
