--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208">
+        링크
+    </a>
    리다이렉트 테스트 페이지
 </body>
 <script src="https://urlopen.link/direct.js"></script>
 <script>
-    window.location.href = 'https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208'
+    // window.location.href = 'https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208'
 </script>
 
 </html>
