--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <a href="https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208" onclick="return XenoUrlOpenLinkDo(this.href);">
         인앱브라우저가 아니면 일반링크로 동작
     </a>
-   리다이렉트 테스트 페이지2
+   리다이렉트 테스트 페이지3
 </body>
 <script src="https://urlopen.link/direct.js"></script>
 <script>
+    let url = XenoUrlOpenLink("https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208"); // 브라우저검사 없이 링크 만들기
 </script>
 
 </html>
