--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://urlopen.link/direct.js"></script>
 <!-- <script src="https://urlopen.link/lib.js"></script> -->
 <script>
-    // let url = XenoUrlOpenLink("https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208"); // 브라우저검사 없이 링크 만들기
+    let url = XenoUrlOpenLink("https://studio.stream.jw.org/t/f60148b02f65248264d414f7402f228acf7f7a104a4536af038d2fe172eb2208"); // 브라우저검사 없이 링크 만들기
 
     
 </script>
